cmake_minimum_required(VERSION 3.17)
project(copy C)

set(CMAKE_C_STANDARD 11)

find_package(Curses REQUIRED)
include_directories(${CURSES_INCLUDE_DIR})

include_directories(corwar/includes)
include_directories(corwar/libft/inc)

add_executable(copy
        corwar/includes/asm.h
        corwar/includes/asm_errors.h
        corwar/includes/asm_op.h
        corwar/includes/corwar.h
        corwar/includes/errors.h
        corwar/includes/g_corewar_op.h
        corwar/includes/op.h
        corwar/includes/visual.h
        corwar/libft/inc/ft_printf.h
        corwar/libft/inc/get_next_line.h
        corwar/libft/inc/libft.h
        corwar/libft/inc/vector.h
        corwar/libft/src/ft_printf/ad_0_after0x.c
        corwar/libft/src/ft_printf/ad_0_aftersign.c
        corwar/libft/src/ft_printf/ad_0_aftersps.c
        corwar/libft/src/ft_printf/ad_fld_end.c
        corwar/libft/src/ft_printf/ad_fld_strt.c
        corwar/libft/src/ft_printf/analyze_format.c
        corwar/libft/src/ft_printf/count_af_dot.c
        corwar/libft/src/ft_printf/find_format.c
        corwar/libft/src/ft_printf/format_c.c
        corwar/libft/src/ft_printf/format_d.c
        corwar/libft/src/ft_printf/format_f.c
        corwar/libft/src/ft_printf/format_o.c
        corwar/libft/src/ft_printf/format_p.c
        corwar/libft/src/ft_printf/format_processing.c
        corwar/libft/src/ft_printf/format_s.c
        corwar/libft/src/ft_printf/format_u.c
        corwar/libft/src/ft_printf/format_x.c
        corwar/libft/src/ft_printf/format_xx.c
        corwar/libft/src/ft_printf/ft_big_itoa_base.c
        corwar/libft/src/ft_printf/ft_dtoa.c
        corwar/libft/src/ft_printf/ft_itoa_base.c
        corwar/libft/src/ft_printf/ft_itoa_long.c
        corwar/libft/src/ft_printf/ft_ldtoa.c
        corwar/libft/src/ft_printf/ft_printf.c
        corwar/libft/src/ft_printf/ft_strjoin_free.c
        corwar/libft/src/ft_printf/ft_strjoin_free2.c
        corwar/libft/src/ft_printf/ft_strrev.c
        corwar/libft/src/ft_printf/ft_strsub_free.c
        corwar/libft/src/ft_printf/ft_unsig_itoa_long.c
        corwar/libft/src/ft_printf/get_mods.c
        corwar/libft/src/ft_printf/help_analyze_format.c
        corwar/libft/src/ft_printf/help_func_for_f.c
        corwar/libft/src/ft_printf/inscrem_s.c
        corwar/libft/src/ft_printf/locate_chr_index.c
        corwar/libft/src/ft_printf/overlay_flags.c
        corwar/libft/src/ft_printf/prec_ftoi.c
        corwar/libft/src/ft_printf/strlen.c
        corwar/libft/src/ft_printf/work_flags_with_d.c
        corwar/libft/src/ft_printf/work_flags_with_f.c
        corwar/libft/src/ft_printf/work_flags_with_o.c
        corwar/libft/src/ft_printf/work_flags_with_p.c
        corwar/libft/src/ft_printf/work_flags_with_per.c
        corwar/libft/src/ft_printf/work_flags_with_s.c
        corwar/libft/src/ft_printf/work_flags_with_u.c
        corwar/libft/src/ft_printf/work_flags_with_x.c
        corwar/libft/src/ft_printf/work_with_f.c
        corwar/libft/src/ft_atoi.c
        corwar/libft/src/ft_atoi32.c
        corwar/libft/src/ft_atol.c
        corwar/libft/src/ft_bzero.c
        corwar/libft/src/ft_error.c
        corwar/libft/src/ft_isalnum.c
        corwar/libft/src/ft_isalpha.c
        corwar/libft/src/ft_isascii.c
        corwar/libft/src/ft_isdigit.c
        corwar/libft/src/ft_isgraph.c
        corwar/libft/src/ft_islower.c
        corwar/libft/src/ft_isprint.c
        corwar/libft/src/ft_isspace.c
        corwar/libft/src/ft_isupper.c
        corwar/libft/src/ft_isxdigit.c
        corwar/libft/src/ft_itoa.c
        corwar/libft/src/ft_lstadd.c
        corwar/libft/src/ft_lstdel.c
        corwar/libft/src/ft_lstdelone.c
        corwar/libft/src/ft_lstiter.c
        corwar/libft/src/ft_lstmap.c
        corwar/libft/src/ft_lstnew.c
        corwar/libft/src/ft_memalloc.c
        corwar/libft/src/ft_memccpy.c
        corwar/libft/src/ft_memchr.c
        corwar/libft/src/ft_memcmp.c
        corwar/libft/src/ft_memcpy.c
        corwar/libft/src/ft_memdel.c
        corwar/libft/src/ft_memmove.c
        corwar/libft/src/ft_memset.c
        corwar/libft/src/ft_putchar.c
        corwar/libft/src/ft_putchar_fd.c
        corwar/libft/src/ft_putendl.c
        corwar/libft/src/ft_putendl_fd.c
        corwar/libft/src/ft_putnbr.c
        corwar/libft/src/ft_putnbr_fd.c
        corwar/libft/src/ft_putstr.c
        corwar/libft/src/ft_putstr_fd.c
        corwar/libft/src/ft_strcat.c
        corwar/libft/src/ft_strchr.c
        corwar/libft/src/ft_strclr.c
        corwar/libft/src/ft_strcmp.c
        corwar/libft/src/ft_strcpy.c
        corwar/libft/src/ft_strdel.c
        corwar/libft/src/ft_strdup.c
        corwar/libft/src/ft_strequ.c
        corwar/libft/src/ft_striter.c
        corwar/libft/src/ft_striteri.c
        corwar/libft/src/ft_strjoin.c
        corwar/libft/src/ft_strjoin_by.c
        corwar/libft/src/ft_strlcat.c
        corwar/libft/src/ft_strlen.c
        corwar/libft/src/ft_strmap.c
        corwar/libft/src/ft_strmapi.c
        corwar/libft/src/ft_strncat.c
        corwar/libft/src/ft_strncmp.c
        corwar/libft/src/ft_strncpy.c
        corwar/libft/src/ft_strndup.c
        corwar/libft/src/ft_strnequ.c
        corwar/libft/src/ft_strnew.c
        corwar/libft/src/ft_strnstr.c
        corwar/libft/src/ft_strrchr.c
        corwar/libft/src/ft_strsplit.c
        corwar/libft/src/ft_strstr.c
        corwar/libft/src/ft_strsub.c
        corwar/libft/src/ft_strtrim.c
        corwar/libft/src/ft_tolower.c
        corwar/libft/src/ft_toupper.c
        corwar/libft/src/get_emplace_vector.c
        corwar/libft/src/get_next_line.c
        corwar/libft/src/init_free_vector.c
        corwar/libft/src/insert_sort_vector.c
        corwar/libft/src/is_filename.c
        corwar/libft/src/push_pop_vector.c
        corwar/src/corewar/visual/visual.c
        corwar/src/corewar/dump_flags.c
        corwar/src/corewar/exit.c
        corwar/src/corewar/g_add.c
        corwar/src/corewar/g_aff.c
        corwar/src/corewar/g_and.c
        corwar/src/corewar/g_byte_int.c
        corwar/src/corewar/g_fork.c
        corwar/src/corewar/g_game_in_cycle.c
        corwar/src/corewar/g_game_logic.c
        corwar/src/corewar/g_get_put_values.c
        corwar/src/corewar/g_help_buffer.c
        corwar/src/corewar/g_ld.c
        corwar/src/corewar/g_ldi.c
        corwar/src/corewar/g_lfork.c
        corwar/src/corewar/g_live.c
        corwar/src/corewar/g_lld.c
        corwar/src/corewar/g_lldi.c
        corwar/src/corewar/g_or.c
        corwar/src/corewar/g_st.c
        corwar/src/corewar/g_sti.c
        corwar/src/corewar/g_sub.c
        corwar/src/corewar/g_xor.c
        corwar/src/corewar/g_zjmp.c
        corwar/src/corewar/init.c
        corwar/src/corewar/main.c
        corwar/src/corewar/parse_champion.c
        corwar/src/corewar/parse_flags.c
        corwar/src/corewar/player_num.c
        corwar/src/corewar/print.c)

target_link_libraries(copy ${CURSES_LIBRARIES})